# genealogy_ai

./: .env.example  .flake8  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  UI_PLAN.md  genealogy_ai_project_plan.md  migrate_phase1_phase2.py  pyproject.toml  test_family_assignment.sh
docs/: QUICKSTART.md  STORAGE_OVERVIEW.md
genealogy_ai/agents/: __init__.py  extract_entities.py  reconcile_people.py
genealogy_ai/cli/: main.py
genealogy_ai/ingestion/: __init__.py  chunking.py  ocr.py
genealogy_ai/schemas/: __init__.py
genealogy_ai/storage/: __init__.py  chroma.py  sqlite.py
src/backend/: app.py  config.py
src/backend/api/: chat.py  documents.py  management.py  tree.py  upload.py
src/backend/genealogy_ai/: __init__.py  config.py
src/backend/genealogy_ai/agents/: __init__.py  extract_entities.py  reconcile_people.py
src/backend/genealogy_ai/cli/: main.py
src/backend/genealogy_ai/ingestion/: __init__.py  chunking.py  ocr.py
src/backend/genealogy_ai/prompts/: extraction.md
src/backend/genealogy_ai/schemas/: __init__.py  extraction.py
src/backend/genealogy_ai/storage/: __init__.py  chroma.py  sqlite.py
src/frontend/: package-lock.json  vite.config.ts
src/frontend/src/: App.css  App.tsx  index.css
src/frontend/src/components/: Chat.css  Chat.tsx  DocumentDetails.css  DocumentDetails.tsx  Tree.css  Tree.tsx  Upload.css  Upload.tsx
